--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <body>
 <h1>Welcome to Autograph</h1>
 </body>
+<footer><center>The copyright is owned and reserved by a Sigma Developer</center></footer>
 </html>
