added  some style in HTML

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>MyWebsite</head>
-<title>Autograph</title>
-<body>
-<h1>Welcome to Autograph</h1>
-</body>
-<footer><center>The copyright is owned and reserved by a Sigma Developer</center></footer>
+  <!--<head>
+    MyWebsite
+  </head>-->
+  <title>Autograph</title>
+  <script src="index.css"></script>
+  <body>
+    <h1
+      style="
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        color: #508ae6;
+      "
+    >
+      Welcome to Autograph
+    </h1>
+    <p
+      style="
+        text-align: center;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+      "
+    >
+      It's my first webpage
+    </p>
+  </body>
+  <footer style="text-align: center">
+    The copyright is owned and reserved by a Sigma Developer
+  </footer>
 </html>
